force-app/main/default/objects/sma__MAWaypoint__c/sma__MAWaypoint__c.object-meta.xml
<CustomObject>
    <label>MapAnything Waypoint</label>
    <nameField>
        <label>Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Waypoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>