force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__BaseObjectId__c.field-meta.xml
<CustomField>
    <fullName>sma__BaseObjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Object Lookup</label>
    <referenceTo>sma__MABaseObject__c</referenceTo>
    <relationshipLabel>MapAnything Waypoints</relationshipLabel>
    <relationshipName>Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>