force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__Case__c.field-meta.xml
<CustomField>
    <fullName>sma__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>MapAnything Waypoints</relationshipLabel>
    <relationshipName>MapAnything_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>