force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__EventId__c.field-meta.xml
<CustomField>
    <fullName>sma__EventId__c</fullName>
    <label>EventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>