force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__HasAddress__c.field-meta.xml
<CustomField>
    <fullName>sma__HasAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Address</label>
    <type>Checkbox</type>
</CustomField>