force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__LinkId__c.field-meta.xml
<CustomField>
    <fullName>sma__LinkId__c</fullName>
    <label>Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>