force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__Longitude__c.field-meta.xml
<CustomField>
    <fullName>sma__Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>