force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__MASavedQry__c.field-meta.xml
<CustomField>
    <fullName>sma__MASavedQry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Saved Query</label>
    <referenceTo>sma__MASavedQry__c</referenceTo>
    <relationshipLabel>Waypoints</relationshipLabel>
    <relationshipName>Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>