force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__Notes__c.field-meta.xml
<CustomField>
    <fullName>sma__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>