force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sma__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MapAnything Waypoints</relationshipLabel>
    <relationshipName>MapAnything_Waypoints</relationshipName>
    <type>Lookup</type>
</CustomField>