force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__Route__c.field-meta.xml
<CustomField>
    <fullName>sma__Route__c</fullName>
    <label>Route</label>
    <referenceTo>sma__MARoute__c</referenceTo>
    <relationshipLabel>Waypoints</relationshipLabel>
    <relationshipName>Waypoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>