force-app/main/default/objects/sma__MAWaypoint__c/fields/sma__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>sma__SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>